# stock-logistics-workflow

./: .copier-answers.yml  .coveragerc  .description  .gitignore  .isort.cfg  .oerp_sentinelrc  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  __init__.py  __openerp__.py  base_data.xml  common.py  load_scenario.py  oca_dependencies.txt  requirements.txt  stock_scanner.py  stock_scanner_view.xml  test-requirements.txt
customer_supplier_invoice_on_dropshipping/: README.rst  __openerp__.py
data/: mrp_lock_lot_data.xml  stock_scanner_data.xml  tranport_mode_data.xml  tranport_plan_sequence.xml
delivery_internal/: README.rst  __manifest__.py
delivery_package_default_shipping_weight/: README.rst  __manifest__.py
delivery_procurement_group_carrier/: README.rst  __manifest__.py
delivery_send_to_shipper_at_operation/: README.rst  __manifest__.py
delivery_total_weight_from_packaging/: README.rst  __manifest__.py
delivery_weight_uom_not_required/: README.rst  __openerp__.py
demo/: stock_scanner_demo.xml
hardware/: sentinel.py
i18n/: es.po  fr.po  mrp_lock_lot.pot  pt_BR.po  sl.po  stock_picking_package_info.pot  stock_scanner.pot
link_sale_purchase_stock/: README.rst  __manifest__.py
model/: __init__.py  transport_mode.py  transport_plan.py
models/: __init__.py  common.py  mrp_production_lot.py  product_category.py  scanner_hardware.py  scanner_hardware_step_history.py  scanner_scenario.py  scanner_scenario_custom.py  scanner_scenario_step.py  scanner_scenario_transition.py  stock.py  stock_config_settings.py  stock_picking.py  stock_production_lot.py  stock_quant.py  stock_scanner.py
mrp_lock_lot/: README.rst  __init__.py  __openerp__.py
mrp_open_lot_attributes/: __init__.py  __openerp__.py  mrp_view.xml  stock.py
mrp_prodlot_autosplit/: __init__.py  __openerp__.py  __terp__.py  company.py  company_view.xml  product.py  stock.py  stock_view.xml
mrp_stock_picking_restrict_cancel/: README.rst  __manifest__.py
on_inventory_retry_assign/: __openerp__.py  stock.py
packing_product_change/: README.rst  __init__.py  __manifest__.py
partner_credit_limit/: README.rst  __init__.py  __manifest__.py
picking_dispatch/: README.rst  __init__.py  __openerp__.py  company.py  cron_data.xml  picking_dispatch.py  picking_dispatch_report.xml  picking_dispatch_sequence.xml  picking_dispatch_view.xml  picking_dispatch_workflow.xml  report.xml  stock.py
picking_dispatch_picking_oriented/: __init__.py  __openerp__.py  dispatch.py  dispatch_view.xml
picking_dispatch_unported/: __init__.py
picking_dispatch_wave/: __init__.py  __openerp__.py  dispatch_wave.py  dispatch_wave_view.xml
picking_line_description/: README.rst  __init__.py  __openerp__.py  res_config.py  stock.py  stock_config_settings.py  stock_config_settings_view.xml  stock_move.py  stock_view.xml
picking_line_sale_link/: __openerp__.py  sale.py  stock.py
procurement_auto_create_group_carrier/: README.rst  __manifest__.py
procurement_jit_assign_move/: README.rst  __init__.py  __openerp__.py
procurement_select_route/: README.rst  __init__.py  __manifest__.py
product_cost_price_avco_sync/: README.rst  __manifest__.py
product_cost_price_avco_sync_mrp/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+7149 files in other folders)
