[project]
name = "odoo-addons-oca-stock-logistics-workflow"
version = "17.0.20240423.0"
dependencies = [
    "odoo-addon-sale_order_global_stock_route>=17.0dev,<17.1dev",
    "odoo-addon-stock_no_negative>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_invoice_link>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_show_return>=17.0dev,<17.1dev",
    "odoo-addon-stock_split_picking>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
